--- a/home.html
+++ b/home.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <!-- ================================================
-    Project:    Andrew Mawhinney Construction page 
+    Project:    Andrew Mawhinney Construction page
     Version:    3.0
     Author:     Andrew Mawhinney
     Owner:      Andrew Mawhinney  --  http://andrewmawhinney.com/
     Email:      ajmawhinn@gmail.com
     Follow:     https://twitter.com/AMawhinn
 ===================================================-->
-<html>
+<html lang="en">
 
 <head>
     <title>AJM Portfolio</title>
@@ -18,7 +18,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
     <link rel="shortcut icon" href="support_files/images/flag.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -31,8 +31,8 @@
 <!-- Navbar -->
         <nav class="aa-nav back2 back1">
             <img class="aa-nav-icon" src="support_files/images/flag.png"/>
-            <ul class="aa-nav-items">
-                <li><a class="font-color2 font-color1 btn waves-effect waves-red" href="">Home</a></li>
+            <ul class="aa-nav-items right">
+                <li><a class="font-color2 font-color1" href="">Home</a></li>
                 <li><a class="font-color2 font-color1" href="">Click me</a></li>
                 <li><a class="font-color2 font-color1" href="">About</a></li>
                 <li><a class="font-color2 font-color1" href="">Contact</a></li>
@@ -61,14 +61,14 @@
 <!-- /Navbar -->
 
         <div id="title">
-            <h1 class="item1">A collection of works <br> Built and designed by <br>Andrew Mawhinney</h1>
+            <h1 class="container row item1 flow-text col s18 m18">A collection of works <br> Built and designed by <br>Andrew Mawhinney</h1>
         </div>
-    <h4 class="sub-title"><strong>The bit of what I do is done not because I have to do it; <br>
-        But because I can do it.  That's what drives me.
-    <hr></strong></h4>
-        <div class="col s5 psh-s7 container"></div>
 
-    <div id="hero" id="top-image"></div>
+        <h4 class="row sub-title flow-text col s12 m6 item2"><strong>The bit of what I do is done not because I have to do it; <br>
+        But because I can do it.  That's what drives me.
+        <hr></strong></h4>
+
+        <div id="hero"></div>
 
 </header>
 
@@ -76,13 +76,13 @@
 
     <div class="col s5 psh-s7 container"></div>
     <div class="container" style="border: solid red 1px" id="body">
-        
 
-        
-        <h1>Hey there!</h1>
+
+
+        <h1>About Me:</h1>
         <h4>I am a Kansas boy jumping head on into the world of Web Development. Keeping life as simple as it should be. </h4>
-        <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h3>
-        <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h3>
+        <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h5>
+        <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h5>
         <!-- Page Content goes here -->
     </div>
 </body>
