Title position bug fix

--- a/home.html
+++ b/home.html
@@ -60,14 +60,14 @@
         </div>
 <!-- /Navbar -->
 
-        <div id="title">
-            <h1 class="container row item1 flow-text col s18 m18">A collection of works <br> Built and designed by <br>Andrew Mawhinney</h1>
+        <div id="title" class="hide-on-med-and-down">
+            <h1 class="row item1 flow-text col s12 m12">A collection of works <br> Built and designed by <br>Andrew Mawhinney</h1>
         </div>
 
-        <h4 class="row sub-title flow-text col s12 m6 item2"><strong>The bit of what I do is done not because I have to do it; <br>
+        <h4 class=" container row sub-title flow-text col s12 m6 item2 hide-on-med-and-down"><strong>The bit of what I do is done not because I have to do it; <br>
         But because I can do it.  That's what drives me.
         <hr></strong></h4>
-
+        <h4 class="hide-on-small-only container">small screen test</h4>
         <div id="hero"></div>
 
 </header>
