--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
             <img class="aa-nav-icon" src="support_files/images/flag.png"/>
             <ul class="aa-nav-items right">
                 <li><a class="font-color2 font-color1" href="">Home</a></li>
-                <li><a class="font-color2 font-color1" href="">Click me</a></li>
+                <li><a class="font-color2 font-color1" href="">Resume</a></li>
                 <li><a class="font-color2 font-color1" href="">About</a></li>
                 <li><a class="font-color2 font-color1" href="">Contact</a></li>
             </ul>
@@ -47,7 +47,7 @@
         <div class="aa-mobile-overlay">
             <ul class="aa-mobile-nav-items">
                 <li><a href="">Home</a></li>
-                <li><a href="">Click me</a></li>
+                <li><a href="">Resume</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Contact</a></li>
                 <!-- <hr></hr> -->
@@ -74,7 +74,7 @@
         <!--<h4 class=" container row sub-title flow-text col s12 m6 item2 hide-on-med-and-down"><strong>The bit of what I do is done not because I have to do it; <br>
         But because I can do it.  That's what drives me.
         <hr></strong></h4>-->
-        <div id="hero"></div>
+        <div class="hero"></div>
 
 </header>
 
@@ -85,10 +85,13 @@
 
 
 
-        <h1>About Me:</h1>
+        <h1>Just a bit about me:</h1>
         <h4>I am a Kansas boy jumping head on into the world of Web Development. Keeping life as simple as it should be. </h4>
         <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h5>
         <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h5>
+        <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h5>
+        <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h5>
+
         <!-- Page Content goes here -->
     </div>
 </body>
