opacity part fix

--- a/home.html
+++ b/home.html
@@ -74,7 +74,8 @@
         <!--<h4 class=" container row sub-title flow-text col s12 m6 item2 hide-on-med-and-down"><strong>The bit of what I do is done not because I have to do it; <br>
         But because I can do it.  That's what drives me.
         <hr></strong></h4>-->
-        <div class="hero"></div>
+        <div class="hero hide-on-small-only"></div>
+        <div class="ero-after show-on-small"></div>
 
 </header>
 
