Double header img fix

--- a/home.html
+++ b/home.html
@@ -75,7 +75,7 @@
         But because I can do it.  That's what drives me.
         <hr></strong></h4>-->
         <div class="hero hide-on-small-only"></div>
-        <div class="ero-after show-on-small"></div>
+        <div class="ero-after hide-on-med-and-up"></div>
 
 </header>
 
