uploading showcase images

--- a/home.html
+++ b/home.html
@@ -81,6 +81,10 @@
 
 <body>
 
+  <!-- Shocase / Grid-->
+
+  <!-- /Shocase / Grid-->
+
     <div class="col s5 psh-s7 container"></div>
     <div class="container" style="border: solid red 1px" id="body">
 
