adding in the showcase

--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
         <nav class="aa-nav back2 back1">
             <img class="aa-nav-icon" src="support_files/images/flag.png"/>
             <ul class="aa-nav-items right">
-                <li><a class="font-color2 font-color1" href="">Home</a></li>
+                <li><a class="font-color2 font-color1" href="#title">Home</a></li>
                 <li><a class="font-color2 font-color1" href="">Resume</a></li>
                 <li><a class="font-color2 font-color1" href="">About</a></li>
                 <li><a class="font-color2 font-color1" href="">Contact</a></li>
@@ -46,7 +46,7 @@
 
         <div class="aa-mobile-overlay">
             <ul class="aa-mobile-nav-items">
-                <li><a href="">Home</a></li>
+                <li><a href="#title">Home</a></li>
                 <li><a href="">Resume</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Contact</a></li>
@@ -61,17 +61,17 @@
 <!-- /Navbar -->
 
         <div id="title" class="hide-on-med-and-down">
-            <h1 class="row item1 flow-text col s12 m12">A collection of works <br> Built and designed by <br>Andrew Mawhinney</h1>
+            <h1 class="roww item1 flow-text col s12 m12">A collection of works <br> Built and designed by <br>Andrew Mawhinney</h1>
         </div>
 
         <div id="title" class="show-on-medium hidden">
-            <h1 class="row item2 flow-text col s12 m12">A collection of works <br> Built and designed by <br>Andrew Mawhinney</h1>
+            <h1 class="roww item2 flow-text col s12 m12">A collection of works <br> Built and designed by <br>Andrew Mawhinney</h1>
         </div>
 
         <div id="title" class="hide-on-med-and-up">
-            <h1 class="row item3 flow-text col s12 m12">A collection of works <br> Built and designed by <br>Andrew Mawhinney</h1>
+            <h1 class="roww item3 flow-text col s12 m12">A collection of works <br> Built and designed by <br>Andrew Mawhinney</h1>
         </div>
-        <!--<h4 class=" container row sub-title flow-text col s12 m6 item2 hide-on-med-and-down"><strong>The bit of what I do is done not because I have to do it; <br>
+        <!--<h4 class=" container roww sub-title flow-text col s12 m6 item2 hide-on-med-and-down"><strong>The bit of what I do is done not because I have to do it; <br>
         But because I can do it.  That's what drives me.
         <hr></strong></h4>-->
         <div class="hero hide-on-small-only"></div>
@@ -80,20 +80,51 @@
 </header>
 
 <body>
+  <div class="container">
+    <hr>
+    <h2 class="text-center">Welcome to my space.<br>Where my work is showcased.</h2>
+    <hr>
+  </div>
 
-  <!-- Shocase / Grid-->
-
-  <!-- /Shocase / Grid-->
+  <!-- Showcase / Grid-->
+    <section class="container section" id="portfolio">
+      <div class="row">
+        <div class="col s12 m6 l4">
+          <img src="images/late_mountian.jpg" alt="first image" class="responsive-img materialboxed">
+        </div>
+        <div class="col s12 m5 l6 offset-l1 offset-m1">
+          <h2 class="text-darken-4">Showcase 1</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 m6 l4 push-l7 push-m7 offset-l1">
+          <img src="images/misty_ledge.jpg" alt="second image" class="responsive-img materialboxed">
+        </div>
+        <div class="col s12 m6 l5 pull-l4 pull-m6">
+          <h2 class="text-darken-4 right-align">Showcase 2</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 m6 l4">
+          <img src="images/foggy_ridge.jpg" alt="third image" class="responsive-img materialboxed">
+        </div>
+        <div class="col s12 m5 l6 offset-l1 offset-m1">
+          <h2 class="text-darken-4">Showcase 3</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+        </div>
+      </div>
+    </section>
+  <!-- /Showcase / Grid-->
 
     <div class="col s5 psh-s7 container"></div>
     <div class="container" style="border: solid red 1px" id="body">
 
-        <h1>Just a bit about me:</h1>
-        <h4>Keeping life as simple as it should be while staying pationate about the things that matter. </h4>
-        <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h5>
-        <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h5>
-        <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h5>
-        <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h5>
+        <h3>Just a bit about me:</h3>
+        <h6>Keeping life as simple as it should be while staying pationate about the things that matter. </h6>
+        <h6>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h6>
+
 
         <!-- Page Content goes here -->
     </div>
