--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
     <link rel="shortcut icon" href="support_files/images/flag.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -129,9 +130,12 @@
         <!-- Page Content goes here -->
     </div>
 </body>
-
+<footer class="container text-center">
+  <hr>
+  <h6>Copyright &copy andrewmawhinney.com | All Rights Reserved. 2018</h6>
+  <p>Powered by a <a href="https://www.raspberrypi.org/" target="_blank" class="link blue-grey-text text-darken-1">raspberry pi!</a> | <strong><i class="fa fa-code"></i></strong> with <strong><i class="fa fa-coffee"></i></strong> by Andrew Mawhinney</p>
+  <hr>
+</footer>
 <link rel="stylesheet" href="support_files/port.css">
-
-
 	<script src="support_files/support.js" type="text/javascript"></script>
 </html>
