added a parallax element

--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
     <link rel="shortcut icon" href="support_files/images/flag.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="support_files/port.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="scripts.js"></script>
@@ -119,6 +119,15 @@
     </section>
   <!-- /Showcase / Grid-->
 
+  <!-- Parallax -->
+    <div class="parallax-container">
+      <h1 class="parallax-title">A nice parallax</h1>
+      <div class="parallax">
+        <img src="images/lanterns.jpg" alt="lanterns" class="responsive-img">
+      </div>
+    </div>
+  <!-- /Parallax -->
+
     <div class="col s5 psh-s7 container"></div>
     <div class="container" style="border: solid red 1px" id="body">
 
@@ -129,6 +138,8 @@
 
         <!-- Page Content goes here -->
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
 </body>
 <footer class="container text-center">
   <hr>
@@ -136,6 +147,5 @@
   <p>Powered by a <a href="https://www.raspberrypi.org/" target="_blank" class="link blue-grey-text text-darken-1">raspberry pi!</a> | <strong><i class="fa fa-code"></i></strong> with <strong><i class="fa fa-coffee"></i></strong> by Andrew Mawhinney</p>
   <hr>
 </footer>
-<link rel="stylesheet" href="support_files/port.css">
 	<script src="support_files/support.js" type="text/javascript"></script>
 </html>
