--- a/home.html
+++ b/home.html
@@ -128,6 +128,41 @@
     </div>
   <!-- /Parallax -->
 
+  <!-- services / tabs -->
+<section class="section container" id="services">
+  <div class="row">
+    <div class="col s12 l4">
+      <h2 class="">What I do..</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+      <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
+    </div>
+    <div class="col s12 l6 offset-l2">
+      <!-- tabs -->
+      <ul class="tabs">
+        <li class="tab col s6">
+          <a href="#photography" class="active tabss">WEB DESIGN</a>
+        </li>
+        <li class="tab col s6">
+          <a href="#editing" class="">Editing</a>
+        </li>
+      </ul>
+      <div id="photography" class="col s12">
+          <p class="flow-text">Web Design</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+          <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
+      </div>
+      <div id="editing" class="col s12">
+          <p class="flow-text">Editing</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
+      </div>
+      </div>
+    </div>
+  </div>
+</section>
+  <!-- /services-->
+
     <div class="col s5 psh-s7 container"></div>
     <div class="container" style="border: solid red 1px" id="body">
 
@@ -140,7 +175,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-</body>
+
 <footer class="container text-center">
   <hr>
   <h6>Copyright &copy andrewmawhinney.com | All Rights Reserved. 2018</h6>
@@ -148,4 +183,5 @@
   <hr>
 </footer>
 	<script src="support_files/support.js" type="text/javascript"></script>
+</body>
 </html>
