--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
     Project:    Andrew Mawhinney Construction page
     Version:    1.0
     Author:     Andrew Mawhinney
-    Owner:      Andrew Mawhinney  --  http://andrewmawhinney.com/
+    Owner:      Andrew Mawhinney  -  http://andrewmawhinney.com/
     Email:      ajmawhinn@gmail.com
     Follow:     https://twitter.com/AMawhinn
 ===================================================-->
@@ -44,7 +44,7 @@
             <span class="aa-icon-bar"></span>
             <span class="aa-icon-bar"></span>
         </div>
-
+    <!-- Mobile Overlay -->
         <div class="aa-mobile-overlay">
             <ul class="aa-mobile-nav-items">
                 <li><a href="#title">Home</a></li>
@@ -91,7 +91,7 @@
     <section class="container section" id="portfolio">
       <div class="row">
         <div class="col s12 m6 l4">
-          <img src="images/late_mountian.jpg" alt="first image" class="responsive-img materialboxed">
+          <img src="images/late_mountian.jpg" alt="first image" class="z-depth-4 responsive-img materialboxed">
         </div>
         <div class="col s12 m5 l6 offset-l1 offset-m1">
           <h2 class="text-darken-4">Showcase 1</h2>
@@ -100,7 +100,7 @@
       </div>
       <div class="row">
         <div class="col s12 m6 l4 push-l7 push-m7 offset-l1">
-          <img src="images/misty_ledge.jpg" alt="second image" class="responsive-img materialboxed">
+          <img src="images/misty_ledge.jpg" alt="second image" class="z-depth-4 responsive-img materialboxed">
         </div>
         <div class="col s12 m6 l5 pull-l4 pull-m6">
           <h2 class="text-darken-4 right-align">Showcase 2</h2>
@@ -109,7 +109,7 @@
       </div>
       <div class="row">
         <div class="col s12 m6 l4">
-          <img src="images/foggy_ridge.jpg" alt="third image" class="responsive-img materialboxed">
+          <img src="images/foggy_ridge.jpg" alt="third image" class="z-depth-4 responsive-img materialboxed">
         </div>
         <div class="col s12 m5 l6 offset-l1 offset-m1">
           <h2 class="text-darken-4">Showcase 3</h2>
@@ -129,38 +129,38 @@
   <!-- /Parallax -->
 
   <!-- services / tabs -->
-<section class="section container" id="services">
-  <div class="row">
-    <div class="col s12 l4">
-      <h2 class="">What I do..</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
-      <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
-    </div>
-    <div class="col s12 l6 offset-l2">
-      <!-- tabs -->
-      <ul class="tabs">
-        <li class="tab col s6">
-          <a href="#photography" class="active tabss">WEB DESIGN</a>
-        </li>
-        <li class="tab col s6">
-          <a href="#editing" class="">Editing</a>
-        </li>
-      </ul>
-      <div id="photography" class="col s12">
-          <p class="flow-text">Web Design</p>
+
+    <section class="section container" id="services">
+      <div class="row">
+        <div class="col s12 l4">
+          <h2 class="grey-text text-darken-4">A bit about me..</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
           <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
+        </div>
+        <div class="col s12 l6 offset-l2">
+          <!-- tabs -->
+          <ul class="tabs">
+            <li class="tab col s6">
+              <a href="#web-developer" class="active grey-text text-darken-4">Web Developer</a>
+            </li>
+            <li class="tab col s6">
+              <a href="#editing" class="grey-text text-darken-4">Editing</a>
+            </li>
+          </ul>
+          <div id="web-developer" class="col s12">
+              <p class="flow-text grey-text text-darken-4">Web Developer</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+              <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
+          </div>
+          <div id="editing" class="col s12">
+              <p class="flow-text grey-text text-darken-4">Editing</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+              <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+          </div>
+          </div>
+        </div>
       </div>
-      <div id="editing" class="col s12">
-          <p class="flow-text">Editing</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-          <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
-      </div>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
   <!-- /services-->
 
     <div class="col s5 psh-s7 container"></div>
@@ -179,7 +179,7 @@
 <footer class="container text-center">
   <hr>
   <h6>Copyright &copy andrewmawhinney.com | All Rights Reserved. 2018</h6>
-  <p>Powered by a <a href="https://www.raspberrypi.org/" target="_blank" class="link blue-grey-text text-darken-1">raspberry pi!</a> | <strong><i class="fa fa-code"></i></strong> with <strong><i class="fa fa-coffee"></i></strong> by Andrew Mawhinney</p>
+  <p>This site is powered by a <a href="https://www.raspberrypi.org/" target="_blank" class="link blue-grey-text text-darken-1">raspberry pi!</a> | <strong><i class="fa fa-code"></i></strong> with <strong><i class="fa fa-coffee"></i></strong> by Andrew Mawhinney</p>
   <hr>
 </footer>
 	<script src="support_files/support.js" type="text/javascript"></script>
