New font, colors and hero img

--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
             <ul class="aa-nav-items right">
                 <li><a class="font-color2 font-color1" href="#title">Home</a></li>
                 <li><a class="font-color2 font-color1" href="">Resume</a></li>
-                <li><a class="font-color2 font-color1" href="">About</a></li>
+                <li><a class="font-color2 font-color1" href="#about">About</a></li>
                 <li><a class="font-color2 font-color1" href="">Contact</a></li>
             </ul>
         </nav>
@@ -49,7 +49,7 @@
             <ul class="aa-mobile-nav-items">
                 <li><a href="#title">Home</a></li>
                 <li><a href="">Resume</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="">Contact</a></li>
                 <!-- <hr></hr> -->
                 <li><a href="">Twitter</a></li>
@@ -130,10 +130,10 @@
 
   <!-- services / tabs -->
 
-    <section class="section container" id="services">
+    <section class="section container" id="about">
       <div class="row">
         <div class="col s12 l4">
-          <h2 class="grey-text text-darken-4">A bit about me..</h2>
+          <h3 class="grey-text text-darken-4">About me..</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
           <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
         </div>
@@ -164,7 +164,7 @@
   <!-- /services-->
 
     <div class="col s5 psh-s7 container"></div>
-    <div class="container" style="border: solid red 1px" id="body">
+    <div class="container" id="body">
 
         <h3>Just a bit about me:</h3>
         <h6>Keeping life as simple as it should be while staying pationate about the things that matter. </h6>
