Added a second parallax with new imgs / & font tweeks

--- a/home.html
+++ b/home.html
@@ -32,12 +32,16 @@
 <!-- Navbar -->
         <nav class="aa-nav back2 back1">
             <img class="aa-nav-icon" src="support_files/images/flag.png"/>
+
             <ul class="aa-nav-items right">
+              <strong class="link">
                 <li><a class="font-color2 font-color1" href="#title">Home</a></li>
                 <li><a class="font-color2 font-color1" href="">Resume</a></li>
                 <li><a class="font-color2 font-color1" href="#about">About</a></li>
                 <li><a class="font-color2 font-color1" href="">Contact</a></li>
+              </strong>
             </ul>
+
         </nav>
         <div class="aa-hamburger-menu collapsed" id="hamburgerMenu" onclick="toggleMenu()">
             <span class="aa-icon-bar"></span>
@@ -94,8 +98,8 @@
           <img src="images/late_mountian.jpg" alt="first image" class="z-depth-4 responsive-img materialboxed">
         </div>
         <div class="col s12 m5 l6 offset-l1 offset-m1">
-          <h2 class="text-darken-4">Showcase 1</h2>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+          <h3 class="text-darken-4">Showcase 1</h3>
+          <p class="pbody">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
         </div>
       </div>
       <div class="row">
@@ -103,8 +107,8 @@
           <img src="images/misty_ledge.jpg" alt="second image" class="z-depth-4 responsive-img materialboxed">
         </div>
         <div class="col s12 m6 l5 pull-l4 pull-m6">
-          <h2 class="text-darken-4 right-align">Showcase 2</h2>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+          <h3 class="text-darken-4 right-align">Showcase 2</h3>
+          <p class="pbody">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
         </div>
       </div>
       <div class="row">
@@ -112,21 +116,21 @@
           <img src="images/foggy_ridge.jpg" alt="third image" class="z-depth-4 responsive-img materialboxed">
         </div>
         <div class="col s12 m5 l6 offset-l1 offset-m1">
-          <h2 class="text-darken-4">Showcase 3</h2>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+          <h3 class="text-darken-4">Showcase 3</h3>
+          <p class="pbody">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
         </div>
       </div>
     </section>
   <!-- /Showcase / Grid-->
 
-  <!-- Parallax -->
+  <!-- Parallax1 -->
     <div class="parallax-container">
       <h1 class="parallax-title">A nice parallax</h1>
       <div class="parallax">
-        <img src="images/lanterns.jpg" alt="lanterns" class="responsive-img">
+        <img src="images/parallax1.jpg" alt="lanterns" class="responsive-img">
       </div>
     </div>
-  <!-- /Parallax -->
+  <!-- /Parallax1 -->
 
   <!-- services / tabs -->
 
@@ -134,8 +138,8 @@
       <div class="row">
         <div class="col s12 l4">
           <h3 class="grey-text text-darken-4">About me..</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
-          <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
+          <p class="pbody">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+          <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
         </div>
         <div class="col s12 l6 offset-l2">
           <!-- tabs -->
@@ -147,15 +151,16 @@
               <a href="#editing" class="grey-text text-darken-4">Editing</a>
             </li>
           </ul>
+          <hr>
           <div id="web-developer" class="col s12">
               <p class="flow-text grey-text text-darken-4">Web Developer</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
-              <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
+              <p class="pbody">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+              <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
           </div>
           <div id="editing" class="col s12">
               <p class="flow-text grey-text text-darken-4">Editing</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
-              <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+              <p class="pbody">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+              <p class="pbody">Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
           </div>
           </div>
         </div>
@@ -163,22 +168,29 @@
     </section>
   <!-- /services-->
 
-    <div class="col s5 psh-s7 container"></div>
-    <div class="container" id="body">
-
-        <h3>Just a bit about me:</h3>
-        <h6>Keeping life as simple as it should be while staying pationate about the things that matter. </h6>
-        <h6>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h6>
-
-
-        <!-- Page Content goes here -->
+  <!-- Parallax2 -->
+    <div class="parallax-container">
+      <h1 class="parallax-title">A nice parallax</h1>
+      <div class="parallax">
+        <img src="images/parallax2.jpg" alt="lanterns" class="responsive-img">
+      </div>
     </div>
+  <!-- /Parallax2 -->
+    <div class="section container">
+      <div class="col s5 psh-s7"></div>
+        <div id="body">
+          <h3>Lorem ipsum dolor sit amet:</h3>
+          <p class="pbody">Keeping life as simple as it should be while staying pationate about the things that matter. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p class="pbody">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+      </div>
+  <!-- JS Sheets -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-
+  <!-- /JS Sheets -->
 <footer class="container text-center">
   <hr>
-  <h6>Copyright &copy andrewmawhinney.com | All Rights Reserved. 2018</h6>
+  <h6>Copyright &copy andrewmawhinney.com | All Rights Reserved - 2018</h6>
   <p>This site is powered by a <a href="https://www.raspberrypi.org/" target="_blank" class="link blue-grey-text text-darken-1">raspberry pi!</a> | <strong><i class="fa fa-code"></i></strong> with <strong><i class="fa fa-coffee"></i></strong> by Andrew Mawhinney</p>
   <hr>
 </footer>
